# signate-drive-rag

./: .gitignore  AGENTS.md  README.md  competition_summary.md  evaluation_ディレクトリ構成.md  pyproject.toml  共有ドライブ_ディレクトリ構成.md
configs/: search_queries.jsonl
evaluation/: crag.py
evaluation/src/: dbmanager.py  evaluator.py  settings.py  validator.py
scripts/: preview_extraction.py
src/signate_drive_rag/: __init__.py  cli.py
src/signate_drive_rag/audit/: __init__.py  loader.py  models.py  serializer.py  service.py
src/signate_drive_rag/baseline_comparison/: __init__.py  models.py  serializer.py  service.py
src/signate_drive_rag/chunk_validation/: __init__.py  models.py  serializer.py  service.py
src/signate_drive_rag/chunking/: __init__.py  loader.py  models.py  serializer.py  service.py  splitter.py
src/signate_drive_rag/corpus_rebuild/: __init__.py  models.py  service.py
src/signate_drive_rag/docling_poc/: __init__.py  analyzer.py  converter.py  models.py  selector.py  serializer.py  service.py
src/signate_drive_rag/document_diagnostics/: __init__.py  models.py  ocr_diagnostic.py  office_filter.py  pdf_diagnostic.py  serializer.py  service.py
src/signate_drive_rag/domain/: __init__.py  extracted_document.py  source_file.py
tests/integration/: test_audit_command.py  test_chunk_command.py  test_diagnose_documents_command.py  test_docling_poc_command.py  test_evaluate_search_command.py  test_extract_command.py  test_index_command.py  test_ocr_extraction.py  test_office_pdf_extraction.py  test_rebuild_corpus_command.py  test_search_command.py  test_xlsx_extraction.py
tests/ocr_real/: test_easyocr_smoke.py
tests/unit/: test_cli.py  test_package.py
(+115 files in other folders)
