[project]
name = "signate-drive-rag"
version = "0.1.0"
description = "SIGNATE社内ドライブRAGコンペ向けの汎用RAGシステム"
readme = "README.md"
authors = [
    { name = "tatsuoka", email = "ttok951021@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "structlog>=26.1.0",
    "typer>=0.26.8",
]

[project.scripts]
signate-drive-rag = "signate_drive_rag.cli:app"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]


[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "artifacts",
    "logs",
    "share",
    "evaluation/data",
    "evaluation/submit",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]

[tool.coverage.run]
source = ["signate_drive_rag"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
pretty = true
mypy_path = "src"
exclude = [
    "^artifacts/",
    "^logs/",
    "^evaluation/",
]
